--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "react-native-webview",
+  "name": "react-native-webview-multi",
   "description": "React Native WebView component for iOS, Android, macOS, and Windows",
   "main": "index.js",
   "main-internal": "src/index.ts",
   "typings": "index.d.ts",
-  "author": "Jamon Holmgren <jamon@infinite.red>",
+  "author": "codintop <codintop@gmail.com>",
   "contributors": [
-    "Thibault Malbranche <malbranche.thibault@gmail.com>"
+    "codintop <codintop@gmail.com>"
   ],
   "license": "MIT",
   "version": "13.6.0",
-  "homepage": "https://github.com/react-native-webview/react-native-webview#readme",
+  "homepage": "https://github.com/CodinDotTop/react-native-webview#readme",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -72,7 +72,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-native-webview/react-native-webview.git"
+    "url": "https://github.com/CodinDotTop/react-native-webview.git"
   },
   "files": [
     "android/src",
